fix h scrollbar try#2

--- a/src/components/TimeSlotsSection/TimeSlotsSection.scss
+++ b/src/components/TimeSlotsSection/TimeSlotsSection.scss
@@ -24,7 +24,7 @@
         
         overflow-y: scroll;
         overflow-x: hidden;
-        scrollbar-width: 8px;
+        //scrollbar-width: 8px;
         height: 234px
         
     }
